kubernetes/kube-prod-d1/tubearchivist/prod-d1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tubearchivist
  namespace: tubearchivist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tubearchivist
  template:
    metadata:
      labels:
        app: tubearchivist
    spec:
      containers:
        - name: tubearchivist
          image: bbilly1/tubearchivist:v0.5.11@sha256:f7bfd5cc8d9931c752d07206f082440a56d88eec595a0a5d684dce762b402d64
          ports:
            - containerPort: 8000
          readinessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8000/api/health
            initialDelaySeconds: 60
            periodSeconds: 30
          volumeMounts:
            - name: media
              mountPath: /youtube
              subPath: youtube
            - name: media
              mountPath: /cache/download
              subPath: downloads/tubearchivist
            - name: cache
              mountPath: /cache/backup
              subPath: backup
            - name: cache
              mountPath: /cache/channels
              subPath: channels
            - name: cache
              mountPath: /cache/db.sqlite3
              subPath: db.sqlite3
            - name: cache
              mountPath: /cache/import
              subPath: import
            - name: cache
              mountPath: /cache/lost+found
              subPath: lost+found
            - name: cache
              mountPath: /cache/playlists
              subPath: playlists
            - name: cache
              mountPath: /cache/videos
              subPath: videos
      volumes:
        - name: media
          nfs:
            server: 10.15.21.132
            path: /mnt/user/video/
        - name: cache
          persistentVolumeClaim:
            claimName: cache-pvc
