kubernetes/kube-prod-d1/tubearchivist/prod-d1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tubearchivist-ingress
  namespace: tubearchivist
  annotations:
    # Cert-manager annotation to automatically request and manage the certificate
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: tubearchivist.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tubearchivist
                port:
                  number: 8000
  tls:
    - hosts:
        - tubearchivist.kube-prod-d1.mclacken.net
      secretName: tubearchivist-certificate-secret
